third_party/WebKit/Source/modules/mediarecorder/MediaRecorder.cpp
@@ -163,7 +163,6 @@ MediaRecorder::MediaRecorder(ExecutionContext* context,
                              ExceptionState& exceptionState)
     : SuspendableObject(context),
       m_stream(stream),
-      m_streamAmountOfTracks(stream->getTracks().size()),
       m_mimeType(options.hasMimeType() ? options.mimeType() : kDefaultMimeType),
       m_stopped(true),
       m_audioBitsPerSecond(0),
@@ -332,13 +331,6 @@ void MediaRecorder::writeData(const char* data,
     m_stopped = false;
     scheduleDispatchEvent(Event::create(EventTypeNames::start));
   }
-  if (m_stream && m_streamAmountOfTracks != m_stream->getTracks().size()) {
-    m_streamAmountOfTracks = m_stream->getTracks().size();
-    onError("Amount of tracks in MediaStream has changed.");
-  }
-
-  // TODO(mcasas): Act as |m_ignoredMutedMedia| instructs if |m_stream| track(s)
-  // is in muted() state.
 
   if (!m_blobData) {
     m_blobData = BlobData::create();
@@ -358,8 +350,8 @@ void MediaRecorder::writeData(const char* data,
 }
 
 void MediaRecorder::onError(const WebString& message) {
-  // TODO(mcasas): Beef up the Error Event and add the |message|, see
-  // https://github.com/w3c/mediacapture-record/issues/31
+  DLOG(ERROR) << message.ascii();
+  stopRecording();
   scheduleDispatchEvent(Event::create(EventTypeNames::error));
 }
 
